--- a/styles/index.css
+++ b/styles/index.css
@@ -1,23 +1,38 @@
-@import url('tabs.css');
+@import url("tabs.css");
 
 :root {
   --background-h: 157;
   --background-s: 33%;
   --background-l: 90%;
-  --background-color: hsl(var(--background-h), var(--background-s), var(--background-l));
+  --background-color: hsl(
+    var(--background-h),
+    var(--background-s),
+    var(--background-l)
+  );
   --text-color: hsl(0, 0%, 20%);
 
   --highlight-h: 43;
   --highlight-s: 90%;
   --highlight-l: 40%;
-  --highlight-color: hsl(var(--highlight-h), var(--highlight-s), var(--highlight-l));
-  --highlight-active-color: hsl(var(--highlight-h), var(--highlight-s), calc(var(--highlight-l) + 20%)); 
-
+  --highlight-color: hsl(
+    var(--highlight-h),
+    var(--highlight-s),
+    var(--highlight-l)
+  );
+  --highlight-active-color: hsl(
+    var(--highlight-h),
+    var(--highlight-s),
+    calc(var(--highlight-l) + 20%)
+  );
 
   --bar-background-h: 157;
   --bar-background-s: 33%;
   --bar-background-l: 30%;
-  --bar-background-color: hsl(var(--bar-background-h), var(--bar-background-s), var(--bar-background-l));
+  --bar-background-color: hsl(
+    var(--bar-background-h),
+    var(--bar-background-s),
+    var(--bar-background-l)
+  );
   --bar-text-color: hsl(0, 0%, 93%);
   --bar-highlight-l: calc(var(--highlight-l) + 30%);
 
